// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Superscript and Subscript Nested SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 2`] = `
Array [
  0.35,
  0,
  0,
  0.084,
  0,
  0.35,
  0,
  0.0539,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 3`] = `
Array [
  0.175,
  0,
  0,
  0.126,
  0,
  0.175,
  0,
  0.09065,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 4`] = `
Array [
  0.0875,
  0,
  0,
  0.147,
  0,
  0.0875,
  0,
  0.10413,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 5`] = `
Array [
  0.0875,
  0,
  0,
  0.1435,
  0,
  0.0875,
  0,
  0.08391,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 6`] = `
Array [
  0.175,
  0,
  0,
  0.119,
  0,
  0.175,
  0,
  0.03552,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Nested SupSub 7`] = `
Array [
  0.35,
  0,
  0,
  0.07,
  0,
  0.35,
  0,
  -0.02695,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 2`] = `
Array [
  0.35,
  0,
  0,
  0.084,
  0,
  0.35,
  0,
  0.0539,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Superscript and Subscript Single SupSub 3`] = `
Array [
  0.35,
  0,
  0,
  0.07,
  0,
  0.35,
  0,
  -0.02695,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
